--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+input {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
