add: highlighting correct answer with green background

--- a/src/app/equation/equation.component.css
+++ b/src/app/equation/equation.component.css
@@ -25,3 +25,8 @@ input:focus {
     text-align: center;
     font-size: 24px;
 }
+
+.correct {
+    background-color: rgb(95, 197, 95);
+    color: ivory;
+}
