--- a/src/app/equation/equation.component.html
+++ b/src/app/equation/equation.component.html
@@ -2,7 +2,7 @@
     <div class="equation">
         {{firstNumber}} + {{secondNumber}} =
     </div>
-    <input formControlName="answer" />
+    <input appAnswerHighlight formControlName="answer" />
 </form>
 <div class="stats">
     Average solution time: {{averageSolutionTime | number: '1.1-3'}}
